# DEgym

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_feature.md  02_bug.md  03_refactor.md  04_experiment.md  05_documentation.md  06_ci_cd.md  07_infrastructure.md
.github/workflows/: github-ci.yml
degym_essentials/: index.html
degym_tutorials/cstr_tutorial/: README.md  action_concrete_classes.py  cstr_utils.py  environment.py  extractors.py  make_env.py  physical_parameters.py  rendering.py  run_one_episode_for_visualization.py  state_concrete_classes.py
degym_tutorials/cstr_tutorial/sampling/: __init__.py  sampling_factory.py  sampling_strategies.py
degym_tutorials/cstr_tutorial/system_dynamics/: diffeqpy_dynamics.py  scipy_dynamics.py
docs/: contributing.md  degym_essentials.md  how_to_build_new_env.md  index.md  installation.md  maintainers.md  terminology.md
how_to_build_new_env/: index.html
installation/: index.html
search/: search_index.json
src/degym/: __init__.py  environment.py
src/degym/action/: __init__.py  action.py  action_converter.py  action_convertor.py  action_preprocessor.py  action_regulator.py
src/degym/extractors/: __init__.py  info_extractor.py  observation_extractor.py  reward_extractor.py  terminated_extractor.py  truncated_extractor.py
src/degym/integrators/: __init__.py  base.py  diffeqpy_integrator.py  scipy_integrator.py
src/degym/physical_parameters/: __init__.py  physical_parameters.py
src/degym/state/: __init__.py  initial_state_generator.py  state.py  state_postprocessor.py  state_preprocessor.py
src/degym/system_dynamics/: __init__.py  base.py  diffeqpy_dynamics.py  scipy_dynamics.py
src/degym/utils/: __init__.py  pydantic_base_model.py
src/degym/utils/non_overridability_utils/: non_overrideability.py
terminology/: index.html
tests/: __init__.py  test_utils.py  utils.py
tests/integration/: conftest.py
tests/integration/degym_tutorials/cstr_tutorial/: test_compare_integrators.py  test_integrate_diffeqpy.py  test_integrate_scipy.py  test_make_env.py  test_sampling.py  test_time_span.py
tests/integration_slow/degym_tutorials/: generate_test_rollouts.py  test_reproduce_rollouts.py
tests/integration_slow/degym_tutorials/configs/: cstr_tutorial.yaml
tests/unit/: test_diffeqpy_integrator.py  test_scipy_integrator.py
tests/unit/degym_tutorials/cstr_tutorial/: conftest.py  test_environment.py  test_extractors.py  test_physical_parameters.py  test_state_classes.py  (+1 more)
(+9 files in other folders)
