[project]
name = "degym"
description = "A framework for developing RL environments for chemical and biological reactors"
readme = "README.md"
authors = [
    { name = "m.carobene@instadeep.com" },
    { name = "f.renard@instadeep.com" },
    { name = "n.siboni@instadeep.com" },
    { name = "m.arbesu@instadeep.com" },
]
requires-python = ">=3.10.14,<3.13"
version = "0.0.1"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy==1.26.4",
    "pydantic>=2.9.2",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "scipy>=1.14.1",
]

[dependency-groups]
dev = [
    "ipython>8,<9",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pyqt5>=5.15.11",
]
lint = ["pre-commit>=3.7.1"]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-sugar>=1.0.0",
    "pytest-clarity>=1.0.1",
    "loguru==0.7.2",
    "hydra-core==1.3.2",
    "matplotlib>=3.10.5"
]
diffeqpy = [
    "diffeqpy==2.5.3",
]


[tool.uv]
default-groups = ["dev", "lint"]
package = true  # This makes uv automatically add packages to PYTHONPATH

# Enforce CPU-only torch also for x86_64 machine. Reduces docker image size.
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "platform_machine == 'x86_64' and platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/degym", "degym_tutorials"]

[tool.ruff]
target-version = "py310"
extend-include = ["*.ipynb"]
fix = true
line-length = 100
exclude = ["tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E5", "E9", "F", "I", "D", "PL", "BLE"]
ignore = [
    "D100", # D100: undocumented-public-module
    "D104", # D104: undocumented-public-package
    "D107", # D107: undocumented-public-init
    "D203", # D203: one-blank-line-before-class
    "D205", # D205: blank-line-after-summary
    "D212", # D212: multi-line-summary-first-line
    "D4",   # D4XX: docstring grammar and whitespace
]

[tool.mypy]
python_version = "3.10"
namespace_packages = true
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
allow_redefinition = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
strict_optional = true
strict_equality = true
explicit_package_bases = true
follow_imports = "skip"
additional_dependencies = []
